--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -7,6 +7,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@reservation) do |f| %>
+      <%= render 'shared/error_messages' %>
 
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
