done some styling login & forms

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,9 +17,18 @@
  @import "animate.min.css";
  @import "styles.css";
 
+
+ /* general */
+
  body {
-   padding-top: 60px;
+   padding-top: 50px;
  }
+
+
+#row-form{
+  padding-top: 50px;
+}
+
 
  /* forms */
 
