--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,28 +1,27 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-3">Ferien auf Koriska buchen</h1>
-    <p class="lead">Bitte hier eine neue Reservierung erstellen.</p>
-  </div>
-</div>
-<div class="row">
+
+<div class="row" id="row-form">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@reservation) do |f| %>
-      <%= render 'shared/error_messages' %>
+    <div class="page-header">
+      <h1 class="text-center">Ferien auf Koriska buchen</h1>
+      <p class="text-center">Bitte hier eine neue Reservierung erstellen</p>
+    </div>
+      <%= form_for(@reservation) do |f| %>
+        <%= render 'shared/error_messages' %>
 
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
+        <%= f.label :name %>
+        <%= f.text_field :name, class: 'form-control' %>
 
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+        <%= f.label :email %>
+        <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.label :start_time %>
-      <%= f.date_select :start_time, {:include_blank => true, :default => nil}, class: 'form-control' %>
+        <%= f.label :start_time %>
+        <%= f.date_select :start_time, {:include_blank => true, :default => nil}, class: 'form-control' %>
 
-      <%= f.label :end_time %>
-      <%= f.date_select :end_time, {:include_blank => true, :default => nil}, class: 'form-control' %>
+        <%= f.label :end_time %>
+        <%= f.date_select :end_time, {:include_blank => true, :default => nil}, class: 'form-control' %>
 
-      <%= f.submit "Jetzt reservieren!", class: "btn btn-primary" %>
-      <%= link_to "Zurück", :back %>
-    <% end %>
+        <%= f.submit "Jetzt reservieren!", class: "btn btn-primary" %>
+        <%= link_to "Zurück", :back %>
+      <% end %>
   </div>
 </div>
