--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,31 @@
-<nav class="navbar navbar-default navbar-fixed-bottom">
+<div id="contactwrap">
   <div class="container">
-  </div>
-</nav>
+    <div class="row">
+      <div class="col-lg-6">
+        <p>Kontaktiere uns!</p>
+        <p>Hast du Fragen, Anregungen oder willst einfach uns nur schreiben? Dann geht das. </p>
+        <p>
+          <small>Korsika <br/>
+          von Sepp<br/>
+          </small>
+        </p>
+        <p>
+      </div>
+
+      <div class="col-lg-6">
+        <form role="form">
+          <div class="form-group">
+            <label for="exampleInputName1">Dein Name</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Namen hier eingeben">
+            <label for="exampleInputEmail1">Deine E-Mail Adresse</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="E-Mail Adresse eingeben">
+            <label for="exampleInputText1">Nachricht</label>
+            <textarea class="form-control" rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn btn-default">Senden</button>
+        </form>
+      </div>
+
+    </div><! --/row -->
+  </div><!-- /container -->
+</div>
