--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,28 +1,27 @@
-<nav id="topNav" class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand page-scroll" href="#first"><i class="ion-ios-analytics-outline"></i> Der Urlaubsplanner</a>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand"><%= link_to 'Corsica Calling', root_path, :class => "navbar-brand" %></a>
         </div>
-        <div class="navbar-collapse collapse" id="bs-navbar">
-            <ul class="nav navbar-nav">
-              <li><%= link_to 'Neue Reservierung', new_path %>  </li>
-                <% if user_signed_in? %>
-                  <li><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
-                <% else %>
-                  <li><%= link_to('Login', new_user_session_path) %></li>
-                <% end %>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                  <%= link_to "Admin", "#", :class => "btn btn-warning" %>
-                </li>
-            </ul>
+        <div class="collapse navbar-collapse" id="navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+              <% if user_signed_in? %>
+                <li><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
+              <% else %>
+                <li><%= link_to('Login', new_user_session_path) %></li>
+              <% end %>
+              <%if current_user.admin? %>
+              <li><%= link_to "Admin", all_path, :class => "btn btn-warning btn-outline btn-circle collapsed" %></li>
+              <%else%>
+              <li><%= link_to 'Neue Reservierung', new_path, :class => "btn btn-warning btn-outline btn-circle collapsed" %></li>
+              <%end%>
         </div>
-    </div>
-</nav>
+      </div>
+    </nav>
