--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,9 +1,24 @@
-
 <div class="row" id="row-form">
   <div class="col-md-6 col-md-offset-3">
     <div class="page-header">
       <h1 class="text-center">Ferien auf Koriska buchen</h1>
       <p class="text-center">Bitte hier eine neue Reservierung erstellen</p>
+    </div>
+    <div class="row">
+    <div class="row mt">
+      <div class="col-lg-4 service">
+        <i class="fa fa-envelope-o"></i><p>Schritt 1<br/><small>Formular ausfüllen</small></p>
+        <p class="text">Wähle ganz einfach deinen Wunschzeitraum aus. Klicke auf "Jetzt reservieren".</p>
+      </div>
+      <div class="col-lg-4 service">
+        <i class="fa fa-calendar-o"></i><p>Schritt 2<br/><small>Prüfung der Anfrage</small></p>
+        <p class="text">Wir werden deine Anfrage schnellstmöglich prüfen.</p>
+      </div>
+      <div class="col-lg-4 service">
+        <i class="fa fa-calendar-check-o"></i><p>Schritt 3<br/><small>Bestätigung</small></p>
+        <p class="text">Ist das Haus in diesem Zeitraum frei, bestätigen wir die Reservierung und melden uns für Weiteres bei dir.</p>
+      </div>
+    </div><! --/row -->
     </div>
       <%= form_for(@reservation) do |f| %>
         <%= render 'shared/error_messages' %>
@@ -20,7 +35,7 @@
         <%= f.label :Bis %>
         <%= f.date_select :end_time, {:include_blank => true, :default => nil}, class: 'form-control' %>
 
-        <br><%= f.submit "Jetzt reservieren!", class: "btn btn-primary" %>
+        <br><%= f.submit "Jetzt reservieren!", class: "btn btn-warning" %>
         <%= link_to "Zurück", :back %> </br>
       <% end %>
   </div>
