--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,4 +1,5 @@
 <% flash.each do |key, value| %>
+<div id="flash">
   <div class="alert alert-danger">
     <a href="#" data-dismiss="alert" class="close">×</a>
     <ul>
@@ -7,4 +8,5 @@
       </li>
     </ul>
   </div>
+</div>
 <% end %>
