--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,7 @@
 
   <body>
    <%= render 'layouts/header' %>
-     <% flash.each do |message_type, message| %>
-       <div class="alert alert-<%= message_type %>"><%= message %></div>
-     <% end %>
+   <%= render 'layouts/messages' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
