--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,9 +80,9 @@ navbar
  .navbar .navbar-collapse { position: relative; overflow: hidden !important; }
  .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 22px; }
 
- .navbar .nav-collapse { position: absolute; z-index: 1; top: 0; left: 0; right: 0; bottom: 0; margin: 0; padding-right: 120px; padding-left: 80px; width: 100%; }
- .navbar.navbar-default .nav-collapse { background-color: #f8f8f8; }
- .navbar.navbar-inverse .nav-collapse { background-color: #222; }
+ .navbar .nav-collapse { position: absolute; z-index: 1; top: 0; left: 0; right: 0; bottom: 0; margin: 0; padding-right: 160px; padding-left: 80px; width: 100%; }
+ .navbar.navbar-default .nav-collapse { background-color: #2F2F2F; }
+ .navbar.navbar-inverse .nav-collapse { background-color: #2F2F2F; }
  .navbar .nav-collapse .navbar-form { border-width: 0; box-shadow: none; }
  .nav-collapse>li { float: right; }
 
@@ -102,7 +102,7 @@ navbar
 
 
  @media screen and (max-width: 767px) {
-     .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 15px; padding-right: 15px; }
+     .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 15px; padding-right: 15px; padding-top: 120px}
 
      .navbar .nav-collapse { margin: 7.5px auto; padding: 0; }
      .navbar .nav-collapse .navbar-form { margin: 0; }
@@ -208,6 +208,6 @@ navbar
    .current-month {}
 
    .has-events {
-     background: #0275D8
+     background: #00BCD4
    }
  }
