--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -2,39 +2,41 @@
 <div class="row" id="row-form">
   <div class="col-md-6 col-md-offset-3">
     <div class="page-header">
-      <h1 class="text-center">Detailinformationen zur Reservierung</h1>
-      <p class="text-center">Alle Informationen zur Reservierung von <%= @reservation.name %></p>
+      <h1 class="text-center">Alle Reservierungen</h1>
+      <p class="text-center">Hier sind alle Reservierungen und Anfragen aufgelistet.</p>
     </div>
-    <p>
-      <strong>Title:</strong>
-      <%= @reservation.name %>
-    </p>
+        <div class "container">
+          <p>
+            <strong>Name:</strong>
+            <%= @reservation.name %>
+          </p>
 
-    <p>
-      <strong>Email:</strong>
-      <%= @reservation.email %>
-    </p>
+          <p>
+            <strong>Email:</strong>
+            <%= @reservation.email %>
+          </p>
 
-    <p>
-      <strong>Reserviert von:</strong>
-      <%= @reservation.start_time.strftime("%d.%m.%y") %>
-    </p>
+          <p>
+            <strong>Reserviert von:</strong>
+            <%= @reservation.start_time.strftime("%d.%m.%y") %>
+          </p>
 
-    <p>
-      <strong>Resviert bis:</strong>
-      <%= @reservation.end_time.strftime("%d.%m.%y") %>
-    </p>
+          <p>
+            <strong>Resviert bis:</strong>
+            <%= @reservation.end_time.strftime("%d.%m.%y") %>
+          </p>
 
-    <p>
-      <strong>Anzahl reservierter Tage</strong>
-      <%= @day%> Tage
-    </p>
+          <p>
+            <strong>Anzahl reservierter Tage</strong>
+            <%= @day%> Tage
+          </p>
 
-    <p>
-      <strong>Reservierung bestätigt?:</strong>
-      <%= @reservation.accepted %>
-    </p>
-    <%= link_to 'Reservierung bearbeiten', edit_reservation_path, class: "btn btn-primary"%>
-    <%= link_to "Zurück", all_path, class: "btn btn-primary"%>
+          <p>
+            <strong>Reservierung bestätigt?:</strong>
+            <%= @reservation.accepted %>
+          </p>
+          <%= link_to 'Reservierung bearbeiten', edit_reservation_path, class: "btn btn-primary"%>
+          <%= link_to "Zurück", all_path, class: "btn btn-primary"%>
+        </div>
+      </div>
   </div>
-</div>
