precompile and buttons

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,8 @@
      <div class="row">
        <div class="col-md-6 col-md-offset-3">
          <h1>Salute! Corsica</h1>
+         </br>
+         <%= link_to "Jetzt das Haus reservieren!", new_path, :class => "btn btn-warning btn-lg"%>
        </div>
      </div><! --/row -->
    </div><! --/container -->
@@ -228,7 +230,6 @@
                <h3>Christoph Berg</h3>
                <p>Ein einheimisches Sprichwort sagt: Wer einmal auf Korsika war, kommt immer wieder</p>
              </div>
-
            </div>
            <!-- Indicators -->
            <ol class="carousel-indicators">
@@ -237,11 +238,17 @@
              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
            </ol>
          </div>
-
        </div><! --/col-lg-8 -->
      </div><! --/row -->
    </div><! --/container -->
  </div><! --/testimonials -->
+ <div class="container">
+   <div class="row">
+     <div class="col-lg-8-offset-2 centered">
+        <%= link_to "Jetzt das Haus reservieren!", new_path, :class => "btn btn-warning btn-lg"%>
+      </div>
+    </div>
+  </div>
  <div id="servicewrap">
    <div class="container">
      <div class="row">
