--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
               <%end%>
             </ul>
             <ul class="collapse nav navbar-nav nav-collapse" id="nav-collapse1">
-              <li><%= link_to "Admin", all_path %></li>
+              <li><%= link_to "Reservierungen", all_path %></li>
               <li> <%= link_to "Kalender", calendar_path %></li>
               <li> <%= link_to "Überschneidungen", conflicts_path %></li>
               <li><a href="#">Nachrichten</a></li>
