--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,11 +1,9 @@
 <% flash.each do |key, value| %>
 <div id="flash">
-  <div class="alert alert-danger">
+  <div class="alert alert-<%= key %>">
     <a href="#" data-dismiss="alert" class="close">×</a>
     <ul>
-      <li>
-        <%= value %>
-      </li>
+      <%= value %>    
     </ul>
   </div>
 </div>
