--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand"><%= link_to 'Corsica Calling', root_path, :class => "navbar-brand" %></a>
+          <a class="navbar-brand"><%= link_to 'Urlaub auf Korsika', root_path, :class => "navbar-brand" %></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
