--- a/app/views/reservations/conflicts.html.erb
+++ b/app/views/reservations/conflicts.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'conflicts') %>
 <div class="row" id="row-form">
   <div class="col-md-6 col-md-offset-3">
     <div class="page-header">
