--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,5 +1,7 @@
-<div class="row" id="row-form">
-  <div class="col-md-6 col-md-offset-3">
+<% provide(:title, 'Korsika buchen') %>
+<div class ="container-fluid" id="row-form">
+  <div class="col-md-6 col-md-offset-3" id="row-form">
+
     <div class="page-header">
       <h1 class="text-center">Ferien auf Koriska buchen</h1>
       <p class="text-center">Bitte hier eine neue Reservierung erstellen</p>
@@ -19,8 +21,9 @@
         <p class="text">Ist das Haus in diesem Zeitraum frei, bestätigen wir die Reservierung und melden uns für Weiteres bei dir.</p>
       </div>
     </div><! --/row -->
+    <div class="row" id="error-div"> </div>
     </div>
-      <%= form_for(@reservation) do |f| %>
+      <%= form_for @reservation do |f| %>
         <%= render 'shared/error_messages' %>
 
         <%= f.label :name %>
@@ -38,5 +41,5 @@
         <br><%= f.submit "Jetzt reservieren!", class: "btn btn-warning" %>
         <%= link_to "Zurück", :back %> </br>
       <% end %>
+    </div>
   </div>
-</div>
