flash devise and mailgun

--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,9 +1,9 @@
 <% flash.each do |key, value| %>
 <div id="flash">
-  <div class="alert alert-<%= key %>">
+  <div class="alert alert-info">
     <a href="#" data-dismiss="alert" class="close">×</a>
     <ul>
-      <%= value %>    
+      <%= value %>
     </ul>
   </div>
 </div>
