--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Reservierung bearbeiten') %>
+<% provide(:title, @reservation.name) %>
 <div class="row" id="row-form">
   <div class="col-md-6 col-md-offset-3">
     <div class="page-header">
