--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,19 +1,8 @@
 <div id="contactwrap">
-  <footer class="container-fluid text-center foot">
-
-          <div class="copyrights">
-              <p class="white-txt">Die Korsika App - 2017
-                  <br><br>
-                  <img class="footimg" src="https://openclipart.org/download/59293/logo-water.svg" alt="Logo">
-              </p>
-              <hr class="dark-line">
-              <a class="link" href="#">Kontakt</a>
-              <a class="link" href="#">Reservieren</a>
-              <a class="link" href="#">Fragen</a>
-              <br><br>
-              <p class="white-txt small">
-                  Build with Love from Munich
-              </p>
-          </div>
-  </footer>
+    <div class="container" style="margin-top: 25px;">
+    	<div class="row">
+    		<legend></legend>
+            <p>Build from Munich with &hearts; Love<p>
+    	</div>
+    </div>
 </div>
