--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -5,6 +5,7 @@
       <h1 class="text-center">Alle Reservierungen</h1>
       <p class="text-center">Hier sind alle Reservierungen und Anfragen aufgelistet.</p>
     </div>
+              <div class="table-responsive">
 									<table class="table table-hover">
                     <thead>
                       <tr>
@@ -36,6 +37,7 @@
                       <% end %>
                     </tbody>
                   </table>
+                </div>
                   <%= will_paginate @reservation, renderer: BootstrapPagination::Rails %>
 								</div>
 							</div>
