--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -30,12 +30,14 @@
          </div>
          <div class="col-md-6">
            <p>die erratischen Kastanienwälder der Castagniccia, die Spuren der Römer, Genuesen und Torreaner, die Gipfel von Cinto, Rotondo und Paglia Orba und die steingewordene Phantasielandschaft der Calanche de Piana.</p>
-           <p> Besiche authentische und uralte Kultplätze und erlebten ein eigenständiges Volk, das bis heute trotz einer ausgesprochen wechselvollen Geschichte die korsische Identität und Sprache pflegt und seinen Stolz bewahrt hat. </p>
-          <p><i>Von Hartmut Krinitz</i></p>
+           <p> Besuche authentische und uralte Kultplätze und erlebe ein eigenständiges Volk, das bis heute trotz einer ausgesprochen wechselvollen Geschichte die korsische Identität und Sprache pflegt und seinen Stolz bewahrt hat. </p>
+          <p><i>Von<%=link_to " Hartmut Krinitz", "http://www.hartmut-krinitz.de/korsika.html", target: "_blank" %></i></p>
+          </br>
+          </br>
+           <%= image_tag("asterix.jpg", :alt => "", :class => "img-responsive") %>
          </div>
 
        </div><! --/col-lg-8-->
-
      </div><!-- /row -->
    </div><!-- /container -->
  </div><!-- /aboutwrap -->
@@ -135,7 +137,7 @@
        <h1>Das Wichtigste in Kürze</h1>
        <div class="col-lg-4 proc">
          <h3>Die Anlage</h3>
-         <p>Die Anlage A Chiosura hat über 50 Häuser, untereilt in 3 Blöcke. Die Häuser sind alle voneinander getrennt und bieten genug Privatsphäre</p>
+         <p>Die Anlage A Chiosura hat ca. 50 Häuser, untereilt in 3 Blöcke. Die Häuser sind alle voneinander getrennt und bieten genug Privatsphäre</p>
        </div>
        <div class="col-lg-4 proc">
          <h3>Das Haus B11</h3>
@@ -143,7 +145,8 @@
        </div>
        <div class="col-lg-4 proc">
          <h3>Der Strand</h3>
-         <p>Die Anlage besitzt einen direkten Strandzugang. Vom Haus sind es 100m direkt ins kühle Wasser.</p>
+         <p>Die Anlage besitzt einen direkten Strandzugang. Unser Strand ist für jeden der möchte einer der vielen FKK Strände auf Korsika. 
+           Vom Haus sind es 100m direkt ins kühle Wasser.</p>
        </div>
 
      </div><! --/row -->
@@ -162,7 +165,7 @@
        <div class="col-lg-8-offset-2 centered">
          <h1>Lerne das Haus kennen.</h1>
          <h3>Ein kleiner Schatz am Meer.</h3>
-         <p>Perfekt für Familien, Ruhesuchenden und Entdecker.</p>
+         <p>Perfekt für Familien, Ruhesuchende und Entdecker.</p>
        </div><!-- /col-lg-8 -->
        <div class="modal fade" id="enlargeImageModal" tabindex="-1" role="dialog" aria-labelledby="enlargeImageModal" aria-hidden="true"> <!--modal plugin for boostrap to enlarge image -->
          <div class="modal-dialog modal-lg" role="document">
