--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
     <div class="container" style="margin-top: 25px;">
     	<div class="row">
     		<legend></legend>
-            <p>Build from Munich with &hearts; Love<p>
+            <p>Build with &hearts; Love from Munich</p>
     	</div>
     </div>
 </div>
