--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,9 +14,9 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <% if user_signed_in? %>
-            <li><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
+            <li class ="nav-item active"> <%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
           <% else %>
-            <li><%= link_to('Login', new_user_session_path) %></li>
+            <li class ="nav-item active"><%= link_to('Login', new_user_session_path) %></li>
           <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Weitere Infos <span class="caret"></span></a>
