--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
           <% else %>
             <li class ="nav-item active"><%= link_to('Login', new_user_session_path) %></li>
           <% end %>
-          <li class="dropdown">
+          <li class="dropdown active">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Weitere Infos <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Entdecken", discover_path %></li>
