--- a/app/views/welcome/discover.html.erb
+++ b/app/views/welcome/discover.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'discover') %>
+<% provide(:title, 'Entdecken') %>
 <div class="row" id="row-form">
   <div class="col-md-6 col-md-offset-3">
     <div class="page-header">
