added year calender, bootsrap nav tab, fixed some styling and added shared error messages for editing reservations

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,16 @@
    padding-top: 50px;
  }
 
+ .nav-tabs > li {
+     float:none;
+     display:inline-block;
+     zoom:1;
+ }
+
+ .nav-tabs {
+     text-align:center;
+ }
+
 
 
 #row-form{
