--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -10,6 +10,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <%= form_for(@reservation) do |f| %>
+          <%= render 'shared/error_messages' %>
           <%= f.label :Name %>
           <%= f.text_field :name, class: 'form-control' %>
 
